version_3/css/F_queries_media.css
/* -------------------------------------------- */

/*    MEDIA QUERIES                    START    */

/* -------------------------------------------- */

@media screen and (max-width: 110rem) {

	body, nav, .feature, .standard, .index {
		grid-template-columns: 0 repeat(5, 14rem) repeat(2, 1fr) 0;
		}

}

@media screen and (max-width: 94.5rem) {

	body, nav, .feature, .standard, .index {
		grid-template-columns: 0 1fr repeat(4, 14rem) 1fr 0;
		}

	.head_nav, .foot_nav, [role="main"] {
		grid-column-end: 9;
		}

	.drawer {
		grid-column: 3 / 8;
		}
}

@media screen and (max-width: 83.5rem) {

	nav > ul {
		grid-area: 1 / 3 / 2 / 4;
		padding-left: .75rem;
		border-left: 1px solid hsla(206, 18%, 70%, 1);
		text-align: left;
		margin-left: -.75rem;
		border-right: none;
		}

	h1:first-of-type{
		margin-top:13.5rem;
		}

	nav a:first-child {
		justify-self: end;
		}

	nav .post_title {
		display: none;
		}

}

@media screen and (max-width: 71.5rem) {

	body, nav, .feature, .standard, .index {
		grid-template-columns: auto repeat(4, 14fr) auto;
		}

	.head_nav, .foot_nav, [role="main"] {
		grid-column-end: 7;
		}

	.c35 { grid-column: 2 / 4; } /* Main Column groupings */

	.c37 { grid-column: 2 / 6; }

	.c46 { grid-column: 3 / 5; }

	.c57 { grid-column: 4 / 6; }

	.c67 { grid-column: 5 / 6; }

	.sticky, .sticky + h2, .drawer {
		grid-column: 2 / 6;
		}

	h1 {
		grid-column-start: 2;
		}

	p + h2, div + h2, section + h2, img + h2 {
		grid-column-start: 2;
		}

	nav a:first-child {
		justify-self: start;
		}

	nav > ul {
		grid-area: 1 / 2 / 2 / 4;
		margin-left: 3.25rem;
		}

}

/* -------------------------------------------- */

/*    MEDIA QUERIES                      END    */

/* -------------------------------------------- */

